--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,11 @@
+2024-02-21
+1. 修复Google等某些应用无法调用相机的问题
+2. 修复侧键滑动动画
+3. 内核 -> AOD及AOD指纹改进
+
+=============================================================
+=============================================================
+
 2024-02-12
 1. 修复一加相机人像模式闪退
 2. 修复锁屏快充提示
